# deep_3d_descriptor

./: CMakeLists.txt  README.md  download_data_network.sh  download_dataset.sh  download_models.sh
include/deep_3D_descriptor/: deep_3D_descriptor.h  match_deep_3D_descriptor.h
include/deep_3D_feature/: deep_3D_feature.h  match_deep_3D_feature.h
include/deep_3d_descriptor/: deep_3d_descriptor.h  match_deep_3d_descriptor.h
python-cpp/: PythonServer.py  pythonCpp.thrift
python-cpp/gen-cpp/: getFeatures.cpp  getFeatures.h  getFeatures_server.skeleton.cpp  pythonCpp_constants.cpp  pythonCpp_constants.h  pythonCpp_types.cpp  pythonCpp_types.h
python-cpp/gen-py/pythonCpp/: __init__.py  getFeatures-remote  getFeatures.py
python_cpp/: python_cpp.thrift  python_server.py
python_cpp/gen-cpp/: get_descriptors.cpp  get_descriptors.h  get_descriptors_server.skeleton.cpp  python_cpp_constants.cpp  python_cpp_constants.h  python_cpp_types.cpp  python_cpp_types.h
python_cpp/gen-py/python_cpp/: __init__.py  get_descriptors.py
python_scripts/: negative_combination_testing.txt  parameters.txt  positive_combination_testing.txt  positive_combination_training.txt  siamese.py  test_model.py  train_model.bash  train_model.py
src/: compute_deep_3D_descriptor.cpp  compute_deep_3D_feature.cpp  compute_deep_3d_descriptor.cpp  deep_3D_descriptor.cpp  deep_3D_feature.cpp  deep_3d_descriptor.cpp  match_deep_3D_descriptor.cpp  match_deep_3D_feature.cpp  match_deep_3d_descriptor.cpp  visualize_deep_3D_descriptor_correspondence.cpp  visualize_deep_3D_feature_correspondence.cpp  visualize_deep_3d_descriptor_correspondences.cpp
